k8s/platform/components/devops-tools/sonarqube/sonarqube-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarqube-ui-route
  namespace: devops-tools
  labels:
    part-of: microservices-platform
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`sonarqube.desarrollo`)
      kind: Rule
      services:
        - name: sonarqube-sonarqube
          port: 9000
