k8s/platform/components/devops-tools/sonarqube/sonarqube-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sonarqube-zero-trust
  namespace: devops-tools
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: sonarqube
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # Desde Traefik
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: networking
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: 9000
    # Desde Prometheus
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: 9000
  egress:
    # Hacia Postgres
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: data-services
          podSelector:
            matchLabels:
              app.kubernetes.io/name: postgresql
      ports:
        - port: 5432
